<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E2E3">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#E2E2E3"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tagline"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="80sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="20sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/textview1"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="5sp"
            android:layout_weight="1"
            android:hint="@string/tap_to_enter"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="20sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/textview"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/targetlang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_weight="1"
            android:hint="@string/tap_to_enter"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="150dp"
                android:dropDownWidth="150dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16sp"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/translateButton"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:background="#8C8C8C"
                android:fontFamily="sans-serif-smallcaps"
                android:onClick="translate"
                android:text="@string/translatebutton"
                android:textSize="36sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/translatedText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20sp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:scrollY="500dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="outsideOverlay"
            android:scrollHorizontally="false"
            android:shadowColor="#FFFFFF"
            android:text="@string/translatedtext"
            android:textColor="#000000"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>